[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Exports/MiniMapGrid.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MiniMap.gd" type="Script" id=3]
[ext_resource path="res://Assets/Exports/MapIcons.png" type="Texture" id=4]

[node name="MiniMap" type="MarginContainer"]
margin_right = 32.0
margin_bottom = 64.0
script = ExtResource( 3 )
zoom = 1

[node name="Frame" type="NinePatchRect" parent="."]
margin_right = 32.0
margin_bottom = 64.0
patch_margin_left = 3
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 32.0
margin_bottom = 64.0

[node name="Grid" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RedTeamIcon" type="Sprite" parent="MarginContainer/Grid"]
unique_name_in_owner = true
visible = false
position = Vector2( 22, 37 )
texture = ExtResource( 4 )
hframes = 3

[node name="BlueTeamIcon" type="Sprite" parent="MarginContainer/Grid"]
unique_name_in_owner = true
visible = false
position = Vector2( 32, 27 )
texture = ExtResource( 4 )
hframes = 3
frame = 1

[node name="PuckIcon" type="Sprite" parent="MarginContainer/Grid"]
unique_name_in_owner = true
visible = false
position = Vector2( 20, 16 )
texture = ExtResource( 4 )
hframes = 3
frame = 2

[node name="Icons" type="Control" parent="."]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 64.0
